<resources>
    <string name="app_name">App Store</string>
    <string name="offline_message">No internet connection</string>
    <string name="free_text">Free</string>
    <string name="placeholder_artist">Artist</string>
    <string name="placeholder_title">Title</string>
    <string name="item_icon_description">Application icon</string>
    <string name="error_loading">Error loading the list.</string>
    <string name="empty_response">Empty list response.</string>
    <string name="retry">Retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="ok_button_label">Ok</string>
    <string name="choose_category">Choose category</string>
    <string name="placeholder_category">Category</string>
    <string name="show_more">Show more</string>
    <string name="placeholder_description">Description</string>
</resources>
