<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/detail_header_margin_bottom"
            android:padding="@dimen/detail_header_padding">

            <ImageView
                android:id="@+id/item_icon"
                android:layout_width="@dimen/item_icon_size"
                android:layout_height="@dimen/item_icon_size"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/item_icon_description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_description_margin"
                android:layout_marginLeft="@dimen/item_description_margin"
                android:layout_marginRight="@dimen/item_description_margin"
                android:layout_marginStart="@dimen/item_description_margin"
                android:layout_toEndOf="@+id/item_icon"
                android:layout_toRightOf="@id/item_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:maxLines="3"
                    android:text="@string/placeholder_title"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/item_title_text_size" />

                <TextView
                    android:id="@+id/item_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:text="@string/placeholder_artist"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/item_artist_text_size" />

                <TextView
                    android:id="@+id/item_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/placeholder_category"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/item_artist_text_size" />

            </LinearLayout>


            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/free_text_margin"
                android:layout_marginRight="@dimen/free_text_margin"
                android:background="@color/primary"
                android:paddingBottom="@dimen/price_padding_bottom"
                android:paddingEnd="@dimen/price_padding_end"
                android:paddingLeft="@dimen/price_padding_start"
                android:paddingRight="@dimen/price_padding_end"
                android:paddingStart="@dimen/price_padding_start"
                android:paddingTop="@dimen/price_padding_top"
                android:text="@string/free_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/free_text_size" />

        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/detail_description_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_description"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/detail_description_content_margin"
                android:layout_marginRight="@dimen/detail_description_content_margin"
                android:ellipsize="end"
                android:maxLines="6"
                android:text="@string/placeholder_description"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/item_show_more_or_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/detail_description_content_margin"
                android:layout_marginRight="@dimen/detail_description_content_margin"
                android:text="@string/show_more"
                android:textColor="@color/primary"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>